--- a/src/app/auth/forms/login-form/login-form.component.html
+++ b/src/app/auth/forms/login-form/login-form.component.html
@@ -1,11 +1,8 @@
 <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit(loginForm)" class="login-form edit">
-  <div class="general-error-message" *ngIf="isLoginFailed && loginForm.pristine">
-    <div class="error-message">
-      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-      Unable to login.<br/>
-      Please check that you have entered your Login and Password correctly.
-    </div>
-  </div>
+  <bd-auth-general-form-error *ngIf="isLoginFailed && loginForm.pristine"
+    [headerText]="'Unable to login.'">
+    Please check that you have entered your Login and Password correctly.
+  </bd-auth-general-form-error>
   <bd-validator [component]="loginForm.controls.username" [errorDefs]="{required: 'This field is required'}">
     <bd-input
       class="bd-form-control"
