--- a/src/app/auth/forms/phone-confirmation-form/phone-confirmation-form.component.html
+++ b/src/app/auth/forms/phone-confirmation-form/phone-confirmation-form.component.html
@@ -1,15 +1,12 @@
 <form [formGroup]="phoneForm" novalidate (ngSubmit)="onSubmit(phoneForm)" class="edit">
-  <div class="general-error-message" *ngIf="isConfirmationFailed && phoneForm.pristine">
-    <div class="error-message">
-      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-      Incorrect number.<br/>
-      Please enter the code that you just got.
-    </div>
-  </div>
-  <div class="general-help-message" *ngIf="!isConfirmationFailed">
+  <bd-auth-general-form-error *ngIf="isConfirmationFailed && phoneForm.pristine"
+    [headerText]="'Incorrect number.'">
+    Please enter the code that you just got.
+  </bd-auth-general-form-error>
+  <bd-auth-form-message-helper>
     A 5-digit Activation Code will be texted to your phone within a few minutes.<br/>
     Code example: 35746
-  </div>
+  </bd-auth-form-message-helper>
   <bd-validator [component]="phoneForm.controls.code" [errorDefs]="{required: 'This field is required'}">
     <bd-input
       class="bd-form-control"
