styles refactor: change height of commodities section

--- a/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
@@ -2,7 +2,7 @@
 
 .commodity-detail-container {
   display: flex;
-  height: $form-control-height;
+  height: 35px;
   background: $white;
   color: $black;
   border-bottom: $border;
