--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -58,6 +58,7 @@
         *ngIf="hasDropoffCommodities"
         class="commodities-container dropoff-border">
         <commodities-header 
+          class="commoditites-header"
           [titles]="commodityHeaders">
         </commodities-header>
           <commodity-details
@@ -74,6 +75,7 @@
       class="commodities-container pickup-border">
       <commodities-header 
         *ngIf="!hasDropoffCommodities"
+         class="commoditites-header"
         [titles]="commodityHeaders">
       </commodities-header>
         <commodity-details
