--- a/src/app/forms/commodities-forms/base-commodity-form/components/header/header.component.scss
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/header/header.component.scss
@@ -1,12 +1,14 @@
 @import '../../../../../../assets/styles/variables';
 
+$default-size: 40px;
+$small-size: 35px;
+
 .header {
   display: flex;
   background: $white;
 
   div {
     display: flex;
-    height: $form-control-height;
     text-align: center;
     flex: 1;
     align-items: center;
@@ -17,6 +19,14 @@
 
     &:last-child {
       border-right-width: 0;
+    }
+
+    &.default {
+      height: $default-size;
+    }
+
+    &.small {
+      height: $small-size;
     }
 
     &.active {
