--- a/src/app/drivers/drivers.html
+++ b/src/app/drivers/drivers.html
@@ -7,6 +7,7 @@
     </div>
   </first-pane>
   <second-pane>
+    <driver-view-form [driver]="selected"></driver-view-form>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
