add featture to insert content inside form-navigation componennt( top right position)

--- a/src/app/shared/components/form-navigation/form-navigation.component.html
+++ b/src/app/shared/components/form-navigation/form-navigation.component.html
@@ -1,5 +1,11 @@
 <div [class.bd-disabled]="disabled" class="form-navigation">
-  <p class="title">{{title}}</p>
+  <div class="top-panel">
+    <p class="title">{{title}}</p>
+    <div class="top-panel-content">
+      <ng-content></ng-content>
+    </div>
+  </div>
+
   <bd-perfect-scrollbar class="container">
     <div class="content">
       <span
