FSPA-395 #comment added part of driver view form

--- a/src/app/forms/driver-view-form/driver-view-form.component.html
+++ b/src/app/forms/driver-view-form/driver-view-form.component.html
@@ -70,6 +70,13 @@
     </div>
   </div>
   <div class="bottom">
-    bottom
+    <div class="restric">
+      <span class="bottom-title">Restrict:</span>
+      <span>A, B, C</span>
+    </div>
+    <div class="endors">
+      <span class="bottom-title">Endors:</span>
+      <span>A, B, C</span>
+    </div>
   </div>
 </div>
