--- a/src/app/forms/locations-form/locations-form.component.html
+++ b/src/app/forms/locations-form/locations-form.component.html
@@ -1,7 +1,7 @@
 <template let-data ngFor [ngForOf]="renderFormData" let-i="index" [ngForTrackBy]="trackBy">
   <div class='bd-form-list-item'>
-   <bd-remove-button class='bd-form-control' (click)='!disabled && removeItem(data)' [disabled]="disabled" [prefixLabel]="label(i)"></bd-remove-button>
-   <location-form [group]='data.group' [location]='data.item' (update)="updateItem($event)" (updatePlace)="onUpdatePlace($event)" [viewMode]="viewMode"></location-form>
+   <bd-remove-button class='bd-form-control' (click)='removeItem(data)' [disabled]="disabled" [prefixLabel]="label(i)"></bd-remove-button>
+   <location-form [group]='data.group' [location]='data.item' (update)="updateItem($event)" [viewMode]="viewMode"[disabled]="disabled" ></location-form>
   </div>
 </template>
-<bd-add-button class='bd-form-control' (click)='!disabled && addNewItem($event)' [disabled]="disabled" [suffixLabel]="'Location'" ></bd-add-button>
+<bd-add-button class='bd-form-control' (click)='addNewItem($event)' [disabled]="disabled" [suffixLabel]="'Location'" ></bd-add-button>
