FSPA-395 #comment added driver view component

--- a/src/app/drivers/drivers.html
+++ b/src/app/drivers/drivers.html
@@ -7,7 +7,7 @@
     </div>
   </first-pane>
   <second-pane>
-    <driver-view-form [driver]="selected"></driver-view-form>
+    <driver-view [driver]="selected"></driver-view>
   </second-pane>
   <third-pane>
     <router-outlet></router-outlet>
