--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -1,3 +1,5 @@
+<customer-view [company]="load.customer"></customer-view>
+<br>
 <div class="stop-view-mode-section"
     [class.expanded-view]="isExpanded">
     <div class="stop-info-container"
