--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -1,4 +1,4 @@
-<customer-view [company]="load.customer"></customer-view>
+<customer-detail [company]="load.customer"></customer-detail>
 <br>
 <div class="stop-view-mode-section"
     [class.expanded-view]="isExpanded">
