--- a/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
@@ -13,7 +13,7 @@
   section {
     display: flex;
     width: 50%;
-    padding: $default-margin 11px;
+    padding: 11px $default-margin;
 
     &:first-of-type {
       border-right: $border;
