fix customer detail border-radius

--- a/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
@@ -6,8 +6,7 @@
   background: $white;
   font-size: $tiny-font-size;
   border-bottom: $border;
-  border-bottom-left-radius: $default-border-radius;
-  border-bottom-right-radius: $default-border-radius;
+  border-radius: $default-border-radius;
   flex-direction: row;
 
   section {
