--- a/src/app/shared/components/templates/address-item/address-item-template.html
+++ b/src/app/shared/components/templates/address-item/address-item-template.html
@@ -4,11 +4,11 @@
       {{item.name}}
     </div>
     <div class="properties">
-      {{item.streetAddress1}}
-      {{item.streetAddress2}}
-      {{item.city}}
-      {{item.state}}
-      {{item.zip}}
+      {{item.address.streetAddress1}}
+      {{item.address.streetAddress2}}
+      {{item.address.city}}
+      {{item.address.state}}
+      {{item.address.zip}}
     </div>
   </div>
 </div>
