add requirements view markup

--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -1,3 +1,5 @@
+<requirements-detail></requirements-detail>
+<br>
 <customer-detail [company]="load.customer"></customer-detail>
 <br>
 <div class="stop-view-mode-section"
