FSPA-395 #comment code refactoring

--- a/src/app/forms/driver-view-form/driver-view-form.component.html
+++ b/src/app/forms/driver-view-form/driver-view-form.component.html
@@ -1,3 +1,5 @@
+<form>
+  <navigation-anchor id="information"></navigation-anchor>
 <bd-form-section [labelText]="'INFORMATION'">
   <div class="information-container">
     <div class="left">
@@ -33,7 +35,7 @@
     </div>
   </div>
 </bd-form-section>
-
+  <navigation-anchor id="equipment-associations"></navigation-anchor>
 <bd-form-section [labelText]="'EQUIPMENT ASSOCIATIONS'">
 </bd-form-section>
 <div class="equipment-associations-container">
@@ -58,6 +60,7 @@
 <div class="price">
   Per Miles: $0,35
 </div>
+<navigation-anchor id="license"></navigation-anchor>
 <bd-form-section [labelText]="'License'">
 </bd-form-section>
 <div class="license-container">
@@ -80,3 +83,4 @@
     </div>
   </div>
 </div>
+</form>
