--- a/src/app/shared/components/bd-form-datetimepicker/bd-form-datetimepicker.component.scss
+++ b/src/app/shared/components/bd-form-datetimepicker/bd-form-datetimepicker.component.scss
@@ -1,6 +1,4 @@
-@import '../../../../assets/styles/variables';
-
-.bd-form-datepicker-container {
+.main-container {
   position: relative;
   display: flex;
 
