--- a/src/app/forms/contacts-info-form/contacts-info-form.component.html
+++ b/src/app/forms/contacts-info-form/contacts-info-form.component.html
@@ -1,4 +1,4 @@
-<template let-data ngFor [ngForOf]="renderFormData" let-i="index">
+<template let-data ngFor [ngForOf]="renderFormData" let-i="index" [ngForTrackBy]="trackBy">
   <div>
    <contact-info-form [group]='data.group' [disabled]="disabled" [contactInfo]='data.item' [viewMode]="viewMode"></contact-info-form>
  </div>
