--- a/src/app/forms/company-form/company-form.component.html
+++ b/src/app/forms/company-form/company-form.component.html
@@ -6,7 +6,8 @@
 			</bd-input>
 			<bd-dropdown class="bd-form-control" [disabled]="disabled" [labelText]="'Company type'" formControlName="type" [items]="companyTypes">
 			</bd-dropdown>
-			<bd-form-switch class="bd-form-control" [disabled]="disabled" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="companyStatuses">
+			<bd-form-switch class="bd-form-control" [disabled]="disabled" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status"
+			 [items]="companyStatuses">
 			</bd-form-switch>
 			<bd-validator [component]="companyForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
 				<bd-input class="bd-form-control" [disabled]="disabled" [labelText]="'MC #'" formControlName="mc">
@@ -16,27 +17,20 @@
 			</bd-input>
 		</bd-form-section>
 		<navigation-anchor id="company-addresses" [isNestedForm]="isNestedForm"></navigation-anchor>
-		<bd-form-section [labelText]="'COMPANY > LOCATIONS'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
-			<locations-form [formArray]='companyForm.controls.locations' (update)="onLocationUpdate($event)" [disabled]="disabled" (remove)="onLocationRemove($event)" (add)="onLocationAdd($event)"  [items]='locations$ | async' [viewMode]="viewMode"></locations-form>
+		<bd-form-section [labelText]="'COMPANY > LOCATIONS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
+			<locations-form [formArray]='companyForm.controls.locations' (update)="onLocationUpdate($event)" [disabled]="disabled" (remove)="onLocationRemove($event)"
+			 (add)="onLocationAdd($event)" [items]='locations$ | async' [viewMode]="viewMode"></locations-form>
 		</bd-form-section>
 		<navigation-anchor id="company-contacts" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [disabled]="disabled" [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
-			<contacts-form [formArray]='companyForm.controls.contacts' [disabled]="disabled" [locations]='locationList' [items]='company.contacts' [viewMode]="viewMode"></contacts-form>
+			<contacts-form [formArray]='companyForm.controls.contacts' [disabled]="disabled" [locations]='locations$ | async' [items]='company.contacts'
+			 [viewMode]="viewMode"></contacts-form>
 		</bd-form-section>
 		<form-sticky-bottom-container [sticky]="!isNestedForm" *ngIf="isEditMode">
 			<div class="button-group">
-				<bd-button
-          [disabled]="disabled"
-					(click)="onCancel()"
-					[text]="'Cancel'"
-					class="button">
+				<bd-button [disabled]="disabled" (click)="onCancel()" [text]="'Cancel'" class="button">
 				</bd-button>
-				<bd-button
-          [disabled]="disabled"
-					type="submit"
-					color="primary"
-					class="button"
-					[text]="submitButtonText">
+				<bd-button [disabled]="disabled" type="submit" color="primary" class="button" [text]="submitButtonText">
 				</bd-button>
 			</div>
 		</form-sticky-bottom-container>
