--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -1,29 +1,46 @@
 @import '../../assets/styles/variables';
 @import '../../assets/styles/font-icons';
 
-.search-icon {
+:host {
   display: flex;
-  padding-left: 20px;
-  align-items: center;
-  justify-content: center;
-
-  i {
-    font-size: 19px;
-  }
+  width: 100%;
+  height: 50px;
+  background: $white;
 }
 
-input {
-  width: 100%;
-  border: 0;
-  font-size: $base-font-size;
-  margin-left: 20px;
-  outline-width: 0;
+.search {
+  display: flex;
+  flex: 1;
+  padding-right: $default-margin;
+
+  .search-icon {
+    display: flex;
+    padding-left: 20px;
+    align-items: center;
+    justify-content: center;
+
+    i {
+      font-size: 19px;
+    }
+  }
+
+  input {
+    width: 100%;
+    border: 0;
+    font-size: $base-font-size;
+    margin-left: 20px;
+    outline-width: 0;
+  }
 }
 
 .right {
   display: flex;
   height: 100%;
   align-items: center;
+
+  .new-load {
+    margin-right: $default-margin;
+  }
 
   span {
     position: relative;
