FSPA-395 update driver, license models, show mock data inside driver view form, lint err, remove odd code

--- a/src/app/forms/driver-view-form/driver-view-form.component.html
+++ b/src/app/forms/driver-view-form/driver-view-form.component.html
@@ -1,14 +1,13 @@
-<form>
-  <navigation-anchor id="information"></navigation-anchor>
+<navigation-anchor id="information"></navigation-anchor>
 <bd-form-section [labelText]="'INFORMATION'">
   <div class="information-container">
     <div class="left">
       <div class="top">
-        <bd-initials-circle class="initials-circle" [firstName]="'Nick'" [lastName]="'Smith'">
+        <bd-initials-circle class="initials-circle" [firstName]="driver.firstName" [lastName]="driver.lastName">
         </bd-initials-circle>
         <div class="top-right">
           <div class="full-name">
-            Nick Smith
+            {{driver.firstName}} {{driver.lastName}}
           </div>
           <div class="top-icons">
             <span class="icon-mail"></span>
@@ -23,42 +22,43 @@
           Birth: 09/091967
         </div>
         <div class="ssn">
-          SSN: 568-555-444
+          SSN: {{driver.ssn}}
         </div>
         <div class="driver-type">
-          Company driver
+          {{driverType}}
         </div>
       </div>
     </div>
     <div class="right">
-      added ruslan markup
+      <bd-contact-info [contactCollection]="driver.contactInfo"></bd-contact-info>
     </div>
   </div>
 </bd-form-section>
-  <navigation-anchor id="equipment-associations"></navigation-anchor>
+<navigation-anchor id="equipment-associations"></navigation-anchor>
 <bd-form-section [labelText]="'EQUIPMENT ASSOCIATIONS'">
 </bd-form-section>
-<div class="equipment-associations-container">
+<div *ngFor="let associatedEquipment of driver.associatedEquipment" class="equipment-associations-container">
   <div class="left">
-      <div class="make-model-circle-wrapper">
-        <span style="background: rgb(133, 209, 131)" class="status-circle"></span>
-        <span class="make-model">Kenworth T610</span>
-      </div>
-      <div class="number">
-        101
-      </div>
+    <div class="make-model-circle-wrapper">
+      <span [style.background]="equipmentStatusColor(associatedEquipment.status)" class="status-circle"></span>
+      <span class="make-model">{{associatedEquipment.make}} {{associatedEquipment.model}}</span>
+    </div>
+    <div class="number">
+      {{associatedEquipment.number}}
+    </div>
   </div>
   <div class="right">
     <div class="equipment">
-      Company Equipment
+      {{equipmentModeText(associatedEquipment.mode)}}
     </div>
     <div class="pover-unit">
-      Pover unit
+      {{equipmentTypeText(associatedEquipment.status)}}
     </div>
   </div>
 </div>
 <div class="price">
-  Per Miles: $0,35
+  <span>{{paymentTypeText}}:</span>
+  <span class="rate">$ {{driver.rate}}</span>
 </div>
 <navigation-anchor id="license"></navigation-anchor>
 <bd-form-section [labelText]="'License'">
@@ -66,21 +66,22 @@
 <div class="license-container">
   <div class="top">
     <div class="left">
-      qwerty1
+      <span class="license-plate-number">Y2</span>
+      <span class="license-class">{{licenseClassText}}</span>
     </div>
     <div class="right">
-      qwerty2
+      <span class="state-issued">{{driver.license.stateIssued}}</span>
+      <span class="date">{{driver.license.dateIssued | date: 'dd/MM/yyyy'}} - {{driver.license.expiration | date: 'dd/MM/yyyy'}}</span>
     </div>
   </div>
   <div class="bottom">
-    <div class="restric">
-      <span class="bottom-title">Restrict:</span>
-      <span>A, B, C</span>
+    <div class="restrictions-container">
+      <span class="bottom-label">Restrict:</span>
+      <span class="types">{{restrictionsTypes}}</span>
     </div>
-    <div class="endors">
-      <span class="bottom-title">Endors:</span>
-      <span>A, B, C</span>
+    <div class="endorsments-container">
+      <span class="bottom-label">Endors:</span>
+      <span class="types">{{endorsmentsTypes}}</span>
     </div>
   </div>
 </div>
-</form>
