--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -1,7 +1,20 @@
-<customer-detail [company]="load.customer"></customer-detail>
-<br>
-<requirements-detail></requirements-detail>
-<br>
-<stop-view [stop]="stop"> </stop-view>
-
-
+<div>
+<form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
+<form>
+    <navigation-anchor id="customer"></navigation-anchor>
+    <bd-view-detail [labelText]="'Customer'" [changeButton]="true" [addButton]="true">
+        <customer-detail [company]="load.customer"></customer-detail>
+    </bd-view-detail>
+ <navigation-anchor id="requirements"></navigation-anchor>
+    <bd-view-detail [labelText]="'Requirements'" [changeButton]="true" [addButton]="true">
+        <requirements-detail [load]="load"></requirements-detail>
+    </bd-view-detail>
+    <navigation-anchor id="itinerary"></navigation-anchor>
+    <bd-view-detail [labelText]="'Itinerary'" [changeButton]="true" [addButton]="true">
+        <stop-view 
+            *ngFor="let stop of stops"
+            [stop]="stop">
+        </stop-view>
+    </bd-view-detail>
+</form>
+</div>
