--- a/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
@@ -3,7 +3,20 @@
 .form-button {
   border: 0;
   background: transparent;
-  color: $blue;
+
+  &.default {
+    color: $blue;
+    font-size: $small-font-size;
+  }
+
+  &.small {
+    color: $dark-grey;
+    font-size: $tiny-font-size;
+
+    &:hover {
+      color: $blue;
+    }
+  }
 
   &:focus {
     outline: 0;
