refactor names of variables

--- a/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.html
@@ -7,8 +7,8 @@
             size='default'>
         </bd-initials-circle>
         <div class="info-container">
-            <span class="company-name text">{{company.name}}</span>
-            <span class="company-mc text">MC# {{company.mc}}</span>
+            <span class="company-name ellipsis">{{company.name}}</span>
+            <span class="company-mc ellipsis">MC# {{company.mc}}</span>
         </div>
     </section>
     <section class="contact-info">
@@ -19,7 +19,7 @@
             size='default'>
         </bd-initials-circle>
         <div class="info-container">
-            <span class="contact-name text">{{company.contacts[0].firstName}} {{company.contacts[0].middleName}} {{company.contacts[0].lastName}}</span>
+            <span class="contact-name ellipsis">{{company.contacts[0].firstName}} {{company.contacts[0].middleName}} {{company.contacts[0].lastName}}</span>
             <span class="buttons-panel">
                 <button class="icon-fax"></button>
                 <button class="icon-call"></button>
