--- a/src/app/loads/components/load-view-mode-card/components/requirements-detail/requirements-detail.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/requirements-detail/requirements-detail.component.html
@@ -5,10 +5,10 @@
         <section class="trailer-type">{{requiredTrailerType}}</section>
     </div>
     <div class="additional-requirements"
-         [class.is-additional-requirements]="isReeferTrailerType">
+         [class.is-additional-requirements]="true">
         <div class="special-requirements">{{load.specialRequirments}}</div>
         <div class="reefer-options">
-            <div class="option temperature">57 F</div>
+            <div class="option temperature">57 Fasfa</div>
             <div class="option refrigerating-type">Cycle</div>
         </div>
     </div>
