--- a/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/customer-detail/customer-detail.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../assets/styles/variables';
 @import '../../../../../../assets/styles/font-icons';
-@import '../../../../../../assets/css/styles';
+@import '../../../../../../assets/styles/styles';
 
 .customer-view-container {
   display: flex;
