--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -36,10 +36,8 @@
   </first-pane>
 
   <second-pane>
-    <load-view-mode-card>
-    </load-view-mode-card>
+      <load-detail></load-detail>
   </second-pane>
-
   <third-pane>
     <router-outlet></router-outlet>
   </third-pane>
